# lambda-cube

./: CHANGELOG.md  flake.nix  lambda-cube.cabal
src/: AST.hs  Interpreter.hs  Main.hs  Parser.hs
