cabal-version: 3.0
name: lambda-cube
version: 0.1.0.0
-- synopsis:
-- description:
license: GPL-3.0-only
license-file: LICENSE
author: Ellis Gibbons
maintainer: egibbons256@gmail.com
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable lambda-cube
    import: warnings
    main-is: Main.hs
    other-modules:
        AST,
        Parser,
        Interpreter
    build-depends:
        base ^>=4.17.2.1,
        text,
        unordered-containers,
        megaparsec,
        transformers,
        mtl,
        haskeline,
        directory,
        filepath

    hs-source-dirs: src
    default-language: GHC2021
